<resources>
    <string name="app_name">Meteor Notebook</string>
    <string name="title_activity_notebook">NotebookActivity</string>
    <string name="begin_observation">Begin Observation</string>
    <string name="petnica_meteor_group">Petnica Meteor Group</string>
    <string name="observation_results">Observation Results</string>
    <string name="title_activity_settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="test_notebook">Test Notebook</string>
    <string name="empty">Empty</string>
    <string name="nights">Nights</string>
    <string name="instructions_text_header">
        Begin Observation:\n
        \n
        Turns the screen black and locks it, disabling all exit buttons - Recent Apps, Home, Back, and Lock to prevent accidental leave.\n
    </string>
    <string name="instructions_text_list">
        - Volume Down enables the notebook and lets you write something down on the screen with your finger(s).\n
        \n
        - Volume Up saves what you wrote and disables the notebook.\n
        \n
        - Holding down Recent Apps and Back ends the observation.\n
    </string>
    <string name="details_text_header_1">
         Begin Observation:\n
    </string>
    <string name="details_text_content_1">
        The idea here is to  not to have to look at your phone at all, hence the locking mechanism and vibration for every action.
        Holding the phone in landscape orientation was planned when designing the button layout, but hold it in whatever position is comfortable.\n
        \n
        There\'s no restrictions to what you can write here, but ideally you\'d write every piece of relevant information, such as
        a change in limiting magnitude, center of field of view, and, of course, meteor sightings. In case you see multiple meteors at the same time,
        you don\'t have to keep pressing Volume Up to save notes. Repeatedly pressing Volume down will save whatever you wrote, clear the notebook,
        and keep it enabled for next writing.\n
    </string>
    <string name="details_text_header_2">
        Observation Results:\n
    </string>
    <string name="details_text_content_2">
        A list of all observation nights and their notes, with exact times they were written. Time is saved when you press Volume Down, and not
        when the note is saved, so the writing delay is not included. Swipe notes to scroll. Click on note numbers to jump to another note.\n
    </string>
    <string name="details_text_header_3">
        Test Notebook:\n
    </string>
    <string name="details_text_content_3">
        A demo of an observation book where the screen is not black, and you can see what you\'re writing. Everything you write here is discarded
        and used for testing only.\n
    </string>
    <string name="details_text_header_4">
        Export Data:\n
    </string>
    <string name="details_text_content_4">
        Exports the written notes to phone storage. Image names represent their UNIX timestamps.\n
    </string>
    <string name="export_data">Export Data</string>
    <string name="placeholder">placeholder</string>
    <string name="utc">UTC</string>
    <string name="other">Other</string>
    <string name="details">Details</string>
    <string name="continue_to_observation">Continue</string>
    <string name="name_of_exported_file">Name of exported file?</string>
    <string name="export">Export</string>
    <string name="cancel">Cancel</string>
    <string name="jump_to">Jump to</string>
</resources>
