<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.meteori.meteorobservationnotebook.activities.InstructionsActivity"
    android:background="@drawable/background2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="21sp"
        android:textColor="@color/title_color"
        android:textAlignment="center"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="9dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_header_1"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_content_1"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="textStart"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_header_2"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_content_2"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="textStart"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_header_3"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_content_3"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="textStart"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_header_4"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_text_content_4"
                android:textColor="@color/menu_button_text_color"
                android:textAlignment="textStart"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
